# lazarada

./: Keyword_lego.xlsx  capcha1.py  capcha2.py  dd.py  demo.py  lazada-api.py  lazada-new.py  lazada-sg-products.csv  lazada-sg-products.xlsx  lazada-sg.ipynb  lazada.py  proceses.py  pyproject.toml  res.json  response.json  tutorial.py  url.py
lazada/: Readme.txt  lazada-sg-products.csv  lazada.ipynb
